Agregue los logos correctamente en el HTML

--- a/IndexPetShop.html
+++ b/IndexPetShop.html
@@ -19,7 +19,9 @@
         </div>
         <!--Barra de menú principal--> 
         <div class="barraNaranja"> 
-            <div class="logo"><span>Front</span><span>Cat&Dog</span> </a></div>   <!--Logo-->        
+            <img class="imagenLogogato" src="./img/Cat.png">
+            <div><span class="logo">Front</span><span class="logoCat">Cat&Dog</span></div>
+            <img class="imagenLogo" src="./img/Dog.png">   <!--Logo-->        
             <nav>   <!--Menú principal-->  
                 <ul type="none" class="listaHorizontal">
                     <li><img src="./img/pawprint 1.png">Categorías</li>
