seccion vitrina productos

--- a/Index.html
+++ b/Index.html
@@ -47,18 +47,22 @@
         </a>
       </Div>  
 
-      <img class="imagenPawPrintGrande" src="./img/pawprintgrande.png">
+      
 
         
         <Section>
-            <h2 align="center">Productos Destacados</h2>
-            <span align="center">Comederos  </span> <span>  -  </span>
-            <span align="center">  Accesorios  </span> <span>  -  </span>
-            <span align="center">  Comida</span>
+            <img class="imagenPawPrintGrande" src="./img/pawprintgrande.png">
+            <h2 class="sectionUb">Productos Destacados</h2>
+            <span class="sectionUb">Comederos  </span> <span>  -  </span>
+            <span class="sectionUb">  Accesorios  </span> <span>  -  </span>
+            <span class="sectionUb">  Comida</span>
         </Section>
+        <section class="vitrinaproductos">
         <a href="./img/churrasquito.png"><img src="./img/churrasquito.png" alt="churrasquito" border="0"></a>
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/347hzfh/comedero.png" alt="comedero" border="0"></a>
-        <a href="https://imgbb.com/"><img src="https://i.ibb.co/tZqk5St/Huesito.png" alt="Huesito" border="0"></a>
+        <a href="./img/comedero.png"><img src="./img/comedero.png" alt="comedero" border="0"></a>
+        <a href="./img/Huesito.png"><img src="./img/Huesito.png" alt="Huesito" border="0"></a>
+        </Section>
+
 
     </Main>
 
